2001-10-20  Sam Steingold  <sds@gnu.org>

	* init.lisp (socket-stream-handle) [:WIN32]: do not export

2001-10-18  Sam Steingold  <sds@gnu.org>

	MAKE-INSTANCE returns the instance,
	not the return value of INITIALIZE-INSTANCE
	* clos.lisp (initial-make-instance): save & return instance
	* record.d (CLOS::%MAKE-INSTANCE): ditto

2001-10-18  Sam Steingold  <sds@gnu.org>

	pass *ARGS* to :INIT-FUNCTION when argv_execute_file is ""
	* spvw.d (init_symbol_values): define_variable EXT:*ARGS*
	(main): when argv_execute_file is "", do not call LOAD,
	just set EXT:*ARGS*

2001-10-05  Arseny Slobodjuck <ampy@ich.dvo.ru>
	    Sam Steingold  <sds@gnu.org>

	Work with terminal/console encoding more directly in win32.
	Initialize terminal-encoding to OEM encoding.
	* stream.d (wr_ch_array_window, wr_ch_window, rd_ch_keyboard)
	[WIN32_NATIVE UNICODE]: do not convert to OEM (encodings do)
	* encoding.d (init_dependent_encodings) [WIN32_NATIVE]:
	init terminal encoding to OEM code page
	* win32aux.d (OEM2ANSI_table, ANSI2OEM_table) [UNICODE]: drop
	(init_win32): ditto
	(lowlevel_full_read, full_write) [UNICODE]: don't translate

2001-10-05  Arseny Slobodjuck <ampy@ich.dvo.ru>
	    Sam Steingold  <sds@gnu.org>

	move win32 console attributes to non-GC-ed area to ensure
	absence of conflicts.
	* stream.d (strm_console_attrib, strm_console_size)
	(strm_console_cursor_pos, UnwrapCoord, WrapCoord, ConsolePosR)
	(ConsoleSizeR, ConsoleAttribR, ConsolePosS, ConsoleSizeS)
	(ConsoleAttribS, ConsoleHandleS) [WIN32_NATIVE]: removed macros
	(unwrap_coord): removed function
	(v_put): no need to move cursor
	(ConsoleData) [WIN32_NATIVE]: new console attrib accessor
	(win32_console_extrafields_struct): new structure, contains
	strm_channel_extrafields_struct and console state.
	(make_window, window_size, window_cursor_position)
	(set_window_cursor_position, clear_window, clear_window_to_eot)
	(clear_window_to_eol, delete_window_line, insert_window_line)