@@ -1,3 +1,7 @@
+2001-10-23  Sam Steingold  <sds@gnu.org>
+
+	* io.d (pprin_object, pprin_object_dispatch): declare local
+
 2001-10-20  Sam Steingold  <sds@gnu.org>
 
 	* init.lisp (socket-stream-handle) [:WIN32]: do not export
